:smiley_cat: null synonyms fix